# vision

./: .gitignore  CMakeLists.txt  NetworkTest.cpp  back_camera_data.xml  ballcargo_temp.py  cameratools.py  grip.py  mjpgFilter.cpp  out_camera_data.xml  requirements.txt  robovision.py  start.sh  tapevision.py  vision.cpp
helpers/: calibration.xml  camera_calibration.cpp  compile.sh  show_corrected.cpp
pipelines/: ballcargo_temp.py  greencargo.py  greentapehsv.py  greentapergb.py  sundaygreen.py  tapePipeline.py  tapePipeline2.py  tapepipe.py  tapetarget.py
